adiciona pagina de surpresa

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 @import './pages/css/Main.css';
 @import './pages/css/Explore.css';
 @import './pages/css/ExploreName.css';
+@import './pages/css/ExploreSurprise.css';
 
 @import './components/css/Header.css';
 @import './components/css/Loading.css';
