--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
 @import './pages/css/Explore.css';
 @import './pages/css/ExploreName.css';
 @import './pages/css/ExploreSurprise.css';
+@import './pages/css/ExploreGeneration.css';
+@import './pages/css/MediaQuerie.css';
 
 @import './components/css/Header.css';
 @import './components/css/Loading.css';
