--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 @import './pages/css/ExploreName.css';
 @import './pages/css/ExploreSurprise.css';
 @import './pages/css/ExploreGeneration.css';
+@import './pages/css/ExploreDetails.css';
 @import './pages/css/MediaQuerie.css';
 
 @import './components/css/Header.css';
