cria pagina de explorar por tipos + rota e css

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 @import './pages/css/ExploreSurprise.css';
 @import './pages/css/ExploreGeneration.css';
 @import './pages/css/ExploreDetails.css';
+@import './pages/css/ExploreTypes.css';
 @import './pages/css/MediaQuerie.css';
 
 @import './components/css/Header.css';
