--- a/src/pages/css/ExploreDetails.css
+++ b/src/pages/css/ExploreDetails.css
@@ -92,6 +92,10 @@
   width: 140px;
 }
 
+.poke-stats {
+  flex-wrap: wrap;
+}
+
 .border {
   border: 1px solid rgba(128, 128, 128, 0.404);
   border-radius: 5px;
